err/asprin.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/asprin'...
Listing './lib/python3.5/site-packages/asprin/examples'...
Listing './lib/python3.5/site-packages/asprin/src'...
Listing './lib/python3.5/site-packages/asprin/src/main'...
Listing './lib/python3.5/site-packages/asprin/src/program_parser'...
Compiling './lib/python3.5/site-packages/asprin/src/program_parser/transitive_closure.py'...
***   File "./lib/python3.5/site-packages/asprin/src/program_parser/transitive_closure.py", line 175
    print tc
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/asprin/src/solver'...
Listing './lib/python3.5/site-packages/asprin/src/spec_parser'...
Listing './lib/python3.5/site-packages/asprin/src/tests'...
Listing './lib/python3.5/site-packages/asprin/src/tests/asprin_lib'...
Listing './lib/python3.5/site-packages/asprin/src/tests/program_parser'...
Listing './lib/python3.5/site-packages/asprin/src/tests/program_parser/basic'...
Listing './lib/python3.5/site-packages/asprin/src/tests/program_parser/program_parser'...
Listing './lib/python3.5/site-packages/asprin/src/tests/program_parser/visitor'...
Listing './lib/python3.5/site-packages/asprin/src/tests/solver'...
Listing './lib/python3.5/site-packages/asprin/src/tests/solver/solver'...
Listing './lib/python3.5/site-packages/asprin/src/tests/spec_parser'...
Listing './lib/python3.5/site-packages/asprin/src/tests/spec_parser/spec_lexer'...
Listing './lib/python3.5/site-packages/asprin/src/tests/spec_parser/spec_parser'...
Listing './lib/python3.5/site-packages/asprin/src/tests/spec_parser/spec_parser/one_dir'...
Listing './lib/python3.5/site-packages/asprin/src/utils'...
Compiling './lib/python3.5/site-packages/asprin/src/utils/utils.py'...
***   File "./lib/python3.5/site-packages/asprin/src/utils/utils.py", line 77
    NO_SIGN = clingo.ast.Sign.None
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/asprin-3.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
